src/qt/cbor/libqcborarray.bf

extension CQt
{
	[LinkName("QCborArray_new")]
	public static extern void* QCborArray_new();
	[LinkName("QCborArray_new2")]
	public static extern void* QCborArray_new2(void* other);
	[LinkName("QCborArray_OperatorAssign")]
	public static extern void QCborArray_OperatorAssign(void* c_this, void* other);
	[LinkName("QCborArray_Swap")]
	public static extern void QCborArray_Swap(void* c_this, void* other);
	[LinkName("QCborArray_ToCborValue")]
	public static extern void QCborArray_ToCborValue(void* c_this);
	[LinkName("QCborArray_Size")]
	public static extern int32 QCborArray_Size(void* c_this);
	[LinkName("QCborArray_IsEmpty")]
	public static extern bool QCborArray_IsEmpty(void* c_this);
	[LinkName("QCborArray_Clear")]
	public static extern void QCborArray_Clear(void* c_this);
	[LinkName("QCborArray_At")]
	public static extern void QCborArray_At(void* c_this, int32 i);
	[LinkName("QCborArray_First")]
	public static extern void QCborArray_First(void* c_this);
	[LinkName("QCborArray_Last")]
	public static extern void QCborArray_Last(void* c_this);
	[LinkName("QCborArray_OperatorSubscript")]
	public static extern void QCborArray_OperatorSubscript(void* c_this, int32 i);
	[LinkName("QCborArray_First2")]
	public static extern void QCborArray_First2(void* c_this);
	[LinkName("QCborArray_Last2")]
	public static extern void QCborArray_Last2(void* c_this);
	[LinkName("QCborArray_OperatorSubscriptWithQsizetype")]
	public static extern void QCborArray_OperatorSubscriptWithQsizetype(void* c_this, int32 i);
	[LinkName("QCborArray_Insert")]
	public static extern void QCborArray_Insert(void* c_this, int32 i, void* value);
	[LinkName("QCborArray_Prepend")]
	public static extern void QCborArray_Prepend(void* c_this, void* value);
	[LinkName("QCborArray_Append")]
	public static extern void QCborArray_Append(void* c_this, void* value);
	[LinkName("QCborArray_Extract")]
	public static extern void QCborArray_Extract(void* c_this, void it);
	[LinkName("QCborArray_ExtractWithIt")]
	public static extern void QCborArray_ExtractWithIt(void* c_this, void it);
	[LinkName("QCborArray_RemoveAt")]
	public static extern void QCborArray_RemoveAt(void* c_this, int32 i);
	[LinkName("QCborArray_TakeAt")]
	public static extern void QCborArray_TakeAt(void* c_this, int32 i);
	[LinkName("QCborArray_RemoveFirst")]
	public static extern void QCborArray_RemoveFirst(void* c_this);
	[LinkName("QCborArray_RemoveLast")]
	public static extern void QCborArray_RemoveLast(void* c_this);
	[LinkName("QCborArray_TakeFirst")]
	public static extern void QCborArray_TakeFirst(void* c_this);
	[LinkName("QCborArray_TakeLast")]
	public static extern void QCborArray_TakeLast(void* c_this);
	[LinkName("QCborArray_Contains")]
	public static extern bool QCborArray_Contains(void* c_this, void* value);
	[LinkName("QCborArray_Compare")]
	public static extern int32 QCborArray_Compare(void* c_this, void* other);
	[LinkName("QCborArray_OperatorEqual")]
	public static extern bool QCborArray_OperatorEqual(void* c_this, void* other);
	[LinkName("QCborArray_OperatorNotEqual")]
	public static extern bool QCborArray_OperatorNotEqual(void* c_this, void* other);
	[LinkName("QCborArray_OperatorLesser")]
	public static extern bool QCborArray_OperatorLesser(void* c_this, void* other);
	[LinkName("QCborArray_Begin")]
	public static extern void QCborArray_Begin(void* c_this);
	[LinkName("QCborArray_ConstBegin")]
	public static extern void QCborArray_ConstBegin(void* c_this);
	[LinkName("QCborArray_Begin2")]
	public static extern void QCborArray_Begin2(void* c_this);
	[LinkName("QCborArray_Cbegin")]
	public static extern void QCborArray_Cbegin(void* c_this);
	[LinkName("QCborArray_End")]
	public static extern void QCborArray_End(void* c_this);
	[LinkName("QCborArray_ConstEnd")]
	public static extern void QCborArray_ConstEnd(void* c_this);
	[LinkName("QCborArray_End2")]
	public static extern void QCborArray_End2(void* c_this);
	[LinkName("QCborArray_Cend")]
	public static extern void QCborArray_Cend(void* c_this);
	[LinkName("QCborArray_Insert2")]
	public static extern void QCborArray_Insert2(void* c_this, void before, void* value);
	[LinkName("QCborArray_Insert3")]
	public static extern void QCborArray_Insert3(void* c_this, void before, void* value);
	[LinkName("QCborArray_Erase")]
	public static extern void QCborArray_Erase(void* c_this, void it);
	[LinkName("QCborArray_EraseWithIt")]
	public static extern void QCborArray_EraseWithIt(void* c_this, void it);
	[LinkName("QCborArray_PushBack")]
	public static extern void QCborArray_PushBack(void* c_this, void* t);
	[LinkName("QCborArray_PushFront")]
	public static extern void QCborArray_PushFront(void* c_this, void* t);
	[LinkName("QCborArray_PopFront")]
	public static extern void QCborArray_PopFront(void* c_this);
	[LinkName("QCborArray_PopBack")]
	public static extern void QCborArray_PopBack(void* c_this);
	[LinkName("QCborArray_Empty")]
	public static extern bool QCborArray_Empty(void* c_this);
	[LinkName("QCborArray_OperatorPlus")]
	public static extern void QCborArray_OperatorPlus(void* c_this, void* v);
	[LinkName("QCborArray_OperatorPlusAssign")]
	public static extern void* QCborArray_OperatorPlusAssign(void* c_this, void* v);
	[LinkName("QCborArray_OperatorShiftLeft")]
	public static extern void* QCborArray_OperatorShiftLeft(void* c_this, void* v);
	[LinkName("QCborArray_FromStringList")]
	public static extern void QCborArray_FromStringList(libqt_string[] list);
	[LinkName("QCborArray_FromJsonArray")]
	public static extern void QCborArray_FromJsonArray(void* array);
	[LinkName("QCborArray_ToJsonArray")]
	public static extern void QCborArray_ToJsonArray(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QCborArray_Delete")]
	public static extern void QCborArray_Delete(void* self);
}
public interface IQCborArray__Iterator
{
	void* NativePtr { get; }
}
public struct QCborArray__IteratorPtr : IQCborArray__Iterator, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New(QCborArray__IteratorPtr other)
	{
		return .(CQt.QCborArray__Iterator_new((other == default || other.NativePtr == default) ? default : other.NativePtr));
	}
	
	public void Dispose()
	{
		CQt.QCborArray__Iterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QCborArray__IteratorPtr other)
	{
		CQt.QCborArray__Iterator_OperatorAssign(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public void OperatorMultiply()
	{
		CQt.QCborArray__Iterator_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QCborArray__Iterator_OperatorMinusGreater(this.nativePtr);
	}
	
	public void* OperatorMinusGreater2()
	{
		return CQt.QCborArray__Iterator_OperatorMinusGreater2(this.nativePtr);
	}
	
	public void OperatorSubscript(int32 j)
	{
		CQt.QCborArray__Iterator_OperatorSubscript(this.nativePtr, j);
	}
	
	public bool OperatorEqual(QCborArray__IteratorPtr o)
	{
		return CQt.QCborArray__Iterator_OperatorEqual(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorNotEqual(QCborArray__IteratorPtr o)
	{
		return CQt.QCborArray__Iterator_OperatorNotEqual(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorLesser(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorLesser(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorLesserOrEqual(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorLesserOrEqual(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreater(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorGreater(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreaterOrEqual(QCborArray__IteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorGreaterOrEqual(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return CQt.QCborArray__Iterator_OperatorEqualWithQCborArrayConstIterator(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorNotEqualWithQCborArrayConstIterator(QCborArray__ConstIteratorPtr o)
	{
		return CQt.QCborArray__Iterator_OperatorNotEqualWithQCborArrayConstIterator(this.nativePtr, (o == default || o.NativePtr == default) ? default : o.NativePtr);
	}
	
	public bool OperatorLesserWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorLesserWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorLesserOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorLesserOrEqualWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreaterWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorGreaterWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QCborArray__ConstIteratorPtr other)
	{
		return CQt.QCborArray__Iterator_OperatorGreaterOrEqualWithOther(this.nativePtr, (other == default || other.NativePtr == default) ? default : other.NativePtr);
	}
	
	public void* OperatorPlusPlus()
	{
		return CQt.QCborArray__Iterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public void OperatorPlusPlusWithInt(int32 param1)
	{
		CQt.QCborArray__Iterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public void* OperatorMinusMinus()
	{
		return CQt.QCborArray__Iterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public void OperatorMinusMinusWithInt(int32 param1)
	{
		CQt.QCborArray__Iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public void* OperatorPlusAssign(int32 j)
	{
		return CQt.QCborArray__Iterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public void* OperatorMinusAssign(int32 j)
	{
		return CQt.QCborArray__Iterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public void OperatorPlus(int32 j)
	{
		CQt.QCborArray__Iterator_OperatorPlus(this.nativePtr, j);
	}
	
	public void OperatorMinus(int32 j)
	{
		CQt.QCborArray__Iterator_OperatorMinus(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQCborArrayIterator(QCborArray__IteratorPtr j)
	{
		return CQt.QCborArray__Iterator_OperatorMinusWithQCborArrayIterator(this.nativePtr, default);
	}
	
}
public class QCborArray__Iterator
{
	public QCborArray__IteratorPtr handle;
	
	public static implicit operator QCborArray__IteratorPtr(Self self)
	{
		return self.handle;
	}
	
	public this(QCborArray__IteratorPtr other)
	{
		this.handle = QCborArray__IteratorPtr.New(other);
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public void OperatorAssign(QCborArray__IteratorPtr other)
	{
		this.handle.OperatorAssign(other);
	}
	
	public void OperatorMultiply()
	{
		this.handle.OperatorMultiply();
	}
	
	public void* OperatorMinusGreater()
	{
		return this.handle.OperatorMinusGreater();
	}
	
	public void* OperatorMinusGreater2()
	{
		return this.handle.OperatorMinusGreater2();
	}
	
	public void OperatorSubscript(int32 j)
	{
		this.handle.OperatorSubscript(j);
	}
	
	public bool OperatorEqual(QCborArray__IteratorPtr o)
	{
		return this.handle.OperatorEqual(o);
	}
	
	public bool OperatorNotEqual(QCborArray__IteratorPtr o)
	{
		return this.handle.OperatorNotEqual(o);
	}
	
	public bool OperatorLesser(QCborArray__IteratorPtr other)
	{
		return this.handle.OperatorLesser(other);
	}
